# opengl-game-engine

./: CMakeLists.txt  LICENSE  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
res/: default.fs  default.vs  suzanne.mtl
src/: conf.hpp  main.cpp
src/3d/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/core/: buf_counter.cpp  buf_counter.hpp  window.cpp  window.hpp
src/game/: game.cpp  game.hpp
src/rendering/: buffer.cpp  buffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp
